Fix `th`'s `text-align` in Safari

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -309,7 +309,7 @@ table {
 }
 
 th {
-  text-align: inherit;
+  @include text-align(left);
 }
 
 // Typography
